Sat Jul 11 01:38:05 1998  Geoffrey King  <gjking@mit.edu>

	* main.c: Added a call to signal() in request_hup()
	        so that the signal handler gets reset after
	        each SIGHUP, since this does not happen
	        automatically in System V's signal handling
	        system.

Wed Jul  8 04:36:28 1998  Geoffrey King  <gjking@mit.edu>

	* extern.h: Added declaration for new variable
	        signal_requests_hup, which is set when the KDC
	        is sent a SIGHUP
	
	* extern.c: Added definition for signal_requests_hup

	* main.c: Added new signal handling code for SIGHUP, including
	        the new function request_hup()

	* network.c: Check signal_requests_hup in the main KDC loop

Fri May  8 18:46:59 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* kerberos_v4.c (krb4_stime): Print 4 digit years in Krb4 log
	 	entries to avoid Y2K issues.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* main.c (initialize_realms): POSIX states that getopt returns -1
		when it is done parsing options, not EOF.

Fri Mar 20 17:13:46 1998  Tom Yu  <tlyu@mit.edu>

	* kdc_util.c (add_to_transited): Check lengths, fix up comma
	quoting somewhat (though things are still way broken).

Fri Feb 20 15:58:21 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* kdc_preauth.c (get_preauth_hint_list): Don't add the pseudo
		preauth type KRB5_PADATA_PW_SALT to the hint list of
		supported preauthentication systems, since it doesn't help
		to send it.  (And it may screw up Cygnus KerbNet clients.)

Wed Feb 18 16:04:22 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (thisconfigdir): Remove trailing slash.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Thu Feb  5 19:17:25 1998  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c: Move macro definition of klog earlier so that it
	actually gets used inside process_v4().

Wed Feb  4 14:15:20 1998  Theodore Y. Ts'o  <tytso@mit.edu>
